# llmops-issue-resolver

./: .env-public  .env_public  .gitignore  404.html  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
experimentation/: main.py  main.sh  placeholder__placeholder__placeholder__placeholder__placeholder.summary.json  pyproject.toml
experimentation/_graveyard/sandbox_project/: README.md  pyproject.toml
experimentation/_graveyard/sandbox_project/docs/api_reference/: http_api.md  sdk.md  tools.md
experimentation/_graveyard/sandbox_project/docs/tutorial/: getting_started.md
experimentation/_graveyard/sandbox_project/src/sandbox_sdk/: README.md  __init__.py  pyproject.toml
experimentation/_graveyard/sandbox_project/src/sandbox_sdk/__tests/: README.md  __init__.py
experimentation/_graveyard/sandbox_project/src/sandbox_sdk/infra/: __init__.py  docker-compose.yml
experimentation/_graveyard/sandbox_project/src/sandbox_sdk/logs/: logging.py
experimentation/_graveyard/sandbox_project2/: example.py  pyproject.toml
experimentation/_graveyard/sandbox_project2/manual_tests/: test_orchestrator.py  test_sandbox.py  test_sandbox_group.py  test_user_tools.py
experimentation/_graveyard/sandbox_project_new/: README.md  pyproject.toml
experimentation/_graveyard/sandbox_project_new/docs/developer_docs/: architecture.md
experimentation/code/imports/: generate_inferences.py  generate_metrics.py  lm_caller.py  lm_tracker.py  run.py  run_ai.py  tool_builder.py
experimentation/code/imports/constants/: constants.py
experimentation/code/imports/helpers/: openai.py  pydantic.py
experimentation/code/imports/prompt_templates/: sde.py
experimentation/code/imports/schemas/: schema_models.py
experimentation/code/imports/static/: append_to_inferences.py  setup_instance.py
experimentation/code/imports/tools/: filesystem_tools.py  fs.py
experimentation/code/imports/utils/: calculate_metrics.py  debugging.py  exceptions.py  images.py  schema_models.py  tokens.py
experimentation/code/scripts/: generate_inferences.py  generate_metrics.py  generate_results.sh  setup_docker.sh  setup_results_generator.sh  setup_swe_bench.sh
experimentation/code/scripts/sub_scripts/: setup_results_generator.sh
experimentation/data/: constants.py
experimentation/datasets/: datasets.yml
experimentation/datasets/princeton-nlp/SWE-bench_Verified/princeton-nlp/: SWE-bench_Verified.parquet
experimentation/logs/build_images/env/sweb.env.x86_64.2baaea72acc974f6c02079__latest/: Dockerfile
experimentation/logs/build_images/instances/sweb.eval.x86_64.django__django-11333__latest/: Dockerfile
experimentation/logs/build_images/instances/sweb.eval.x86_64.django__django-13821__latest/: Dockerfile
experimentation/logs/build_images/instances/sweb.eval.x86_64.scikit-learn__scikit-learn-13439__latest/: Dockerfile
experimentation/logs/build_images/instances/sweb.eval.x86_64.sympy__sympy-19783__latest/: Dockerfile
experimentation/results/: metrics.yml
experimentation/results/subresults/: inference.jsonl  inferences.jsonl  summary.json
experimentation/sandbox_project/: README.md  TODO  docker-compose.yml  pyproject.toml
experimentation/sandbox_project/docs/api_reference/: README.md  config.md
experimentation/sandbox_project/docs/tutorial/: getting_started.md
experimentation/sandbox_project/knowledge/: README.md
experimentation/sandbox_project/manual_tests/: example.py  test_orchestrator.py  test_sandbox.py  test_sandbox_group.py  test_user_tools.py
experimentation/sandbox_project/sandbox/: pyproject.toml
experimentation/sandbox_project/sandbox/api/: main.py
experimentation/sandbox_project/sandbox/core/: __init__.py
experimentation/sandbox_project/sandbox/tools/: models.py  terminal_tools.py  web_tools.py
experimentation/sandbox_project/sandbox_gateway/: pyproject.toml
experimentation/sandbox_project/sandbox_gateway/api/: auth.py  key_manager.py  proxy.py
experimentation/sandbox_project/sandbox_orchestrator/: pyproject.toml
experimentation/sandbox_project/sandbox_orchestrator/core/: cleanup.py  models.py
experimentation/sandbox_project/sandbox_orchestrator/core/models/: __init__.py  database.py  endpoints.py  resources.py  sandbox.py  sandbox_group.py
experimentation/sandbox_project/sandbox_orchestrator/databases/: __init__.py  document_store.py
experimentation/sandbox_project/sandbox_orchestrator/databases/config/: graph_db.yml
experimentation/sandbox_project/sandbox_orchestrator/databases/data/: graph_db_initial_data.json  vector_db_initial_data.json
experimentation/sandbox_project/sandbox_orchestrator/databases/vector_db/: vector_db.py
experimentation/sandbox_project/src/: README.md
experimentation/sandbox_project/src/sandbox_sdk/: __init__.py  auth.py  client.py  config.py  exceptions.py  logging.py  models.py  pyproject.toml  sandbox.py  service_manager.py
experimentation/sandbox_project/src/sandbox_sdk/helpers/: models.py
experimentation/sandbox_project/src/sandbox_sdk/logs/: README.md  models.py
experimentation/sandbox_project/src/sandbox_sdk/models/: endpoints.py  resources.py
experimentation/sandbox_project/src/sandbox_sdk/sdk/: README.md  __init__.py  client.py  models.py  sandbox.py
experimentation/sandbox_project/src/sandbox_toolkit/: __init__.py
experimentation/sandbox_project/src/sandbox_toolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
experimentation/sandbox_project/src/sandbox_toolkit/infra/: docker-compose.yml
experimentation/sandbox_project/tests/: README.md  setup_tests.sh
experimentation/sandbox_project/tests/integration/: test_sandbox_resource_limits.py
experimentation/sandbox_project/tests/unit/: test_sandbox.py  test_sandbox_config.py  test_sandbox_orchestrator.py
experimentation/sandbox_project/tools/: my_tool.py
experimentation/tmp/django/: fail_to_pass.txt  tips.txt
experimentation/tmp/scikit-learn/: fail_to_pass.txt  tips.txt
llmops-issue-resolver/: LICENSE  README.md  pyproject.toml
llmops-issue-resolver/src/llmops_issue_resolver/: cli.py
(+202 files in other folders)
