[project]
name = "llmops-issue-resolver"
version = "0.1.2"
description = """
                Automatically resolves issues of LLMOps projects. 
                Receives as input a repo and an issue to resolve, outputs a repo with the issue resolved.
            """
requires-python = "==3.9.0"
readme = "README.md"
authors = [
    { name = "Bruno Scaglione", email = "bruno.c.scaglione@gmail.com" }
]
license = {file = "LICENSE"}
dependencies = [
    "typer"
]

[project.scripts]
llmops-issue-resolver-cli = "llmops_issue_resolver.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
default = true # treated as the lowest priority index 
