[project]
name = "sandbox-gateway"
version = "0.1.0"
description = "Python package for sandbox-gateway"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "httpx>=0.25.1",
    "redis>=5.0.1",
    "pydantic>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"
